mariadb/mariadb-sevice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mariadb
  name: mariadb
  namespace: homeautomation
spec:
  selector:
    io.kompose.service: mariadb
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
status:
  loadBalancer: {}
