mariadb/influxdb-ingress-internal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: influxdb
  namespace: homeautomation
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: influxdb.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: influxdb
          servicePort: 8086
